--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
-
+@import url("./font/ArimaMadurai-Medium.ttf");
 body {
 	font-family: 'Indie Flower', cursive !important;
     background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
@@ -142,9 +142,6 @@ h4 {
     z-index: 2;
       background-image: url("./src/play.png");
       background-repeat: no-repeat!important;
-      background-position: center;
-      background-size: 16px;
-    background-repeat:no-repeat;
     background-position:center;
     background-size:60px;
   }
